--- a/frontend/src/components/Map.css
+++ b/frontend/src/components/Map.css
@@ -6,6 +6,14 @@
 
 .map {
   position: absolute;
-  width: 100%;
+  width: 80%;
+  height: 80%;
+}
+
+.map-error, .map-loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
+  background-color: #f5f5f5;
 }
